syntax = "proto3";

package aico.core;

option go_package = "github.com/boeni-industries/aico/proto/core";
option java_package = "industries.boeni.aico.proto.core";
option java_multiple_files = true;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "core/common.proto";

// Plugin System Messages
// These messages define the communication protocol for the AICO Plugin System

// Plugin metadata information
message PluginMetadata {
  string plugin_id = 1;                     // Unique identifier for the plugin
  string name = 2;                          // Display name
  string version = 3;                       // Semantic version
  string description = 4;                   // Description
  string author = 5;                        // Author information
  string website = 6;                       // Website URL
  string license = 7;                       // License information
  string min_aico_version = 8;              // Minimum compatible AICO version
  repeated string permissions = 9;          // Required permissions
  ResourceRequirements resources = 10;      // Resource requirements
  string entry_point = 11;                  // Main entry point
  map<string, string> attributes = 12;      // Additional attributes
}

// Plugin resource requirements
message ResourceRequirements {
  string memory = 1;      // Memory limit (e.g., "128MB")
  string storage = 2;     // Storage limit (e.g., "50MB")
  string cpu = 3;         // CPU limit (e.g., "0.5")
  uint32 api_rate = 4;    // API calls per minute
}

// Topic access permissions
message TopicAccess {
  repeated string subscribe_topics = 1;   // Topics the plugin can subscribe to
  repeated string publish_topics = 2;     // Topics the plugin can publish to
}

// Plugin installation request
message PluginInstallRequest {
  string plugin_id = 1;                   // Plugin ID to install
  string version = 2;                     // Specific version (optional)
  bool auto_enable = 3;                   // Auto-enable after installation
  string installation_source = 4;         // Source URL or marketplace
}

// Plugin installation response
message PluginInstallResponse {
  enum Status {
    UNKNOWN = 0;
    SUCCESS = 1;
    FAILED = 2;
    PENDING = 3;
  }
  
  Status status = 1;                      // Installation status
  string message = 2;                     // Status message
  PluginMetadata metadata = 3;            // Installed plugin metadata
  string installation_id = 4;             // Installation tracking ID
}

// Plugin uninstall request
message PluginUninstallRequest {
  string plugin_id = 1;                   // Plugin ID to uninstall
  bool remove_data = 2;                   // Whether to remove plugin data
}

// Plugin uninstall response
message PluginUninstallResponse {
  bool success = 1;                       // Success status
  string message = 2;                     // Status message
}

// Plugin enable/disable request
message PluginStateChangeRequest {
  string plugin_id = 1;                   // Plugin ID
  bool enabled = 2;                       // Desired state
}

// Plugin enable/disable response
message PluginStateChangeResponse {
  bool success = 1;                       // Success status
  string message = 2;                     // Status message
  bool current_state = 3;                 // Current state after operation
}

// Plugin list request
message PluginListRequest {
  bool include_disabled = 1;              // Include disabled plugins
  string category_filter = 2;             // Filter by category
}

// Plugin list response
message PluginListResponse {
  repeated PluginInstance plugins = 1;    // List of plugins
}

// Plugin instance with runtime information
message PluginInstance {
  PluginMetadata metadata = 1;            // Plugin metadata
  bool enabled = 2;                       // Whether plugin is enabled
  google.protobuf.Timestamp install_time = 3;  // Installation timestamp
  PluginStatus status = 4;                // Current runtime status
  PluginResourceUsage resource_usage = 5; // Current resource usage
}

// Plugin runtime status
enum PluginStatus {
  PLUGIN_UNKNOWN = 0;
  PLUGIN_ACTIVE = 1;
  PLUGIN_INACTIVE = 2;
  PLUGIN_ERROR = 3;
  PLUGIN_UPDATING = 4;
}

// Plugin resource usage statistics
message PluginResourceUsage {
  double cpu_percent = 1;                 // CPU usage percentage
  uint64 memory_bytes = 2;                // Memory usage in bytes
  uint64 storage_bytes = 3;               // Storage usage in bytes
  uint32 api_calls_per_minute = 4;        // API call rate
}

// Plugin configuration update
message PluginConfigurationUpdate {
  string plugin_id = 1;                   // Plugin ID
  map<string, string> settings = 2;       // Key-value settings
}

// Plugin event notification
message PluginEvent {
  enum EventType {
    UNKNOWN = 0;
    INSTALLED = 1;
    UNINSTALLED = 2;
    ENABLED = 3;
    DISABLED = 4;
    UPDATED = 5;
    ERROR = 6;
    PERMISSION_CHANGED = 7;
  }
  
  EventType event_type = 1;               // Event type
  string plugin_id = 2;                   // Plugin ID
  google.protobuf.Timestamp timestamp = 3;  // Event timestamp
  string message = 4;                     // Event message
  google.protobuf.Any details = 5;        // Event-specific details
}

// Plugin permission request
message PluginPermissionRequest {
  string plugin_id = 1;                   // Plugin ID
  repeated string permissions = 2;        // Requested permissions
  string reason = 3;                      // Reason for request
}

// Plugin permission response
message PluginPermissionResponse {
  bool granted = 1;                       // Whether permission was granted
  repeated string granted_permissions = 2; // Permissions that were granted
  repeated string denied_permissions = 3;  // Permissions that were denied
}

// Plugin marketplace query
message PluginMarketplaceQuery {
  string search_term = 1;                 // Search term
  string category = 2;                    // Category filter
  string sort_by = 3;                     // Sort field
  bool sort_ascending = 4;                // Sort direction
  int32 page = 5;                         // Page number
  int32 page_size = 6;                    // Page size
}

// Plugin marketplace result
message PluginMarketplaceResult {
  repeated PluginMarketplaceEntry plugins = 1;  // List of plugins
  int32 total_results = 2;                // Total number of results
  int32 page = 3;                         // Current page
  int32 total_pages = 4;                  // Total number of pages
}

// Plugin marketplace entry
message PluginMarketplaceEntry {
  PluginMetadata metadata = 1;            // Plugin metadata
  double rating = 2;                      // Average rating (0-5)
  int32 downloads = 3;                    // Number of downloads
  repeated string screenshots = 4;        // Screenshot URLs
  string detailed_description = 5;        // Detailed description (markdown)
  repeated string categories = 6;         // Categories
  repeated string tags = 7;               // Tags
  bool is_verified = 8;                   // Whether plugin is verified
  bool is_featured = 9;                   // Whether plugin is featured
  string latest_version = 10;             // Latest version
  google.protobuf.Timestamp publish_date = 11;  // Publish date
  google.protobuf.Timestamp update_date = 12;   // Last update date
}

// TODO: IMPLEMENT additional message types for plugin sandboxing, resource monitoring,
// and plugin-specific API access control.
